GH-4592 Replace more Junit4 Suite with v5 DynamicTest
Also delete some deprecated tests classes that are no longer compatible
with the junit5 way of doing things.

Signed-off-by: Jerven Bolleman <jerven.bolleman@sib.swiss>