@@ -10,17 +10,11 @@
  *******************************************************************************/
 package org.eclipse.rdf4j.testsuite.query.parser.sparql.manifest;
 
-import java.util.ArrayDeque;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Deque;
 import java.util.List;
 
-import org.eclipse.rdf4j.query.Dataset;
-import org.junit.Before;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.DynamicTest;
 
 /**
  * A test suite that runs the W3C Approved SPARQL 1.0 query tests.
@@ -29,74 +23,35 @@ import org.junit.runners.Parameterized;
  *
  * @see <a href="https://www.w3.org/2009/sparql/docs/tests/">sparql docs test</a>
  */
-@RunWith(Parameterized.class)
 public abstract class SPARQL10QueryComplianceTest extends SPARQLQueryComplianceTest {
 
-	private static final String[] defaultIgnoredTests = {
-			// incompatible with SPARQL 1.1 - syntax for decimals was modified
-			"Basic - Term 6",
-			// incompatible with SPARQL 1.1 - syntax for decimals was modified
-			"Basic - Term 7",
-			// Test is incorrect: assumes timezoned date is comparable with non-timezoned
-			"date-2",
-			// Incompatible with SPARQL 1.1 - string-typed literals and plain literals are identical
-			"Strings: Distinct",
-			// Incompatible with SPARQL 1.1 - string-typed literals and plain literals are identical
-			"All: Distinct",
-			// Incompatible with SPARQL 1.1 - string-typed literals and plain literals are identical
-			"SELECT REDUCED ?x with strings"
+	private final List<String> defaultIgnoredTests = new ArrayList<>();
+	{
+		// incompatible with SPARQL 1.1 - syntax for decimals was modified
+		defaultIgnoredTests.add("Basic - Term 6");
+		// incompatible with SPARQL 1.1 - syntax for decimals was modified
+		defaultIgnoredTests.add("Basic - Term 7");
+		// Test is incorrect: assumes timezoned date is comparable with non-timezoned
+		defaultIgnoredTests.add("date-2");
+		// Incompatible with SPARQL 1.1 - string-typed literals and plain literals are
+		// identical
+		defaultIgnoredTests.add("Strings: Distinct");
+		// Incompatible with SPARQL 1.1 - string-typed literals and plain literals are
+		// identical
+		defaultIgnoredTests.add("All: Distinct");
+		// Incompatible with SPARQL 1.1 - string-typed literals and plain literals are
+		// identical
+		defaultIgnoredTests.add("SELECT REDUCED ?x with strings");
 	};
 
-	private static final List<String> excludedSubdirs = List.of("service");
-
-	/**
-	 * @param displayName
-	 * @param testURI
-	 * @param name
-	 * @param queryFileURL
-	 * @param resultFileURL
-	 * @param dataset
-	 * @param ordered
-	 */
-	public SPARQL10QueryComplianceTest(String displayName, String testURI, String name, String queryFileURL,
-			String resultFileURL, Dataset dataset, boolean ordered, boolean laxCardinality) {
-		super(displayName, testURI, name, queryFileURL, resultFileURL, dataset, ordered, laxCardinality);
-	}
-
-	@Parameterized.Parameters(name = "{0}")
-	public static Collection<Object[]> data() {
-		return Arrays.asList(getTestData());
-	}
-
-	@Override
-	@Before
-	public void setUp() throws Exception {
-		super.setUp();
+	public SPARQL10QueryComplianceTest() {
+		super(List.of("service"));
 		for (String defaultIgnoredTest : defaultIgnoredTests) {
 			addIgnoredTest(defaultIgnoredTest);
 		}
 	}
 
-	private static Object[][] getTestData() {
-
-		List<Object[]> tests = new ArrayList<>();
-
-		Deque<String> manifests = new ArrayDeque<>();
-		manifests.add(
-				SPARQL10QueryComplianceTest.class.getClassLoader()
-						.getResource("testcases-sparql-1.0-w3c/data-r2/manifest-evaluation.ttl")
-						.toExternalForm());
-		while (!manifests.isEmpty()) {
-			String pop = manifests.pop();
-			SPARQLQueryTestManifest manifest = new SPARQLQueryTestManifest(pop, excludedSubdirs);
-			tests.addAll(manifest.getTests());
-			manifests.addAll(manifest.getSubManifests());
-		}
-
-		Object[][] result = new Object[tests.size()][6];
-		tests.toArray(result);
-
-		return result;
+	public Collection<DynamicTest> tests() {
+		return getTestData("testcases-sparql-1.0-w3c/data-r2/manifest-evaluation.ttl");
 	}
-
 }
